# tesisapp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  backend.inja  credentials.txt  db_data.txt  meta.cpp  sql_script.sql  vcpkg.json
include/: backend_creator.hpp  backend_generator.hpp
inja_templates/: app.inja  controllers.inja  models.inja  modelsIndex.inja  routes.inja  routesIndex.inja  server.inja
input/: models.txt
src/: backend_creator.cpp  backend_generator.cpp  database.cpp  main.cpp
